# CSViewer

./: .gitignore  CMakeLists.txt  CmdLineParser.cpp  README.md  Settings.h
src/: CMakeLists.txt  CSV.cpp  CSV.h  CSViewer.cpp  CSViewer.h  ClassReflection.h  CmdLineParser.cpp  CmdLineParser.h  Command.cpp  Command.h  FrameView.cpp  FrameView.h  IConvConverter.cpp  IConvConverter.h  PromptParser.cpp  PromptParser.h  Range.cpp  Range.h  StringUtils.h  UTF8Utils.cpp  UTF8Utils.h
tests/: CMakeLists.txt  CSVContainerTests.cpp  CmdLineParserTests.cpp  LibiconvTests.cpp  PromptParserTests.cpp  RangeTests.cpp  UTF8UtilsTests.cpp  main.cpp  test1.cpp
tests/data/: test_utf8_comma_noquote_hasheader_nobadlines.csv  test_utf8_comma_noquote_hasheader_nobadlines_nonascii.csv  test_utf8_comma_noquote_noheader_nobadlines.csv
